objects/Approval__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <formula>Agreement__r.Agreement_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Product__c</fullName>
        <formula>Matter_Deal__r.Product2__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Agreement__r.Review_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fit_To_Lend_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fit To Lend Checklist</label>
        <referenceTo>Fit_To_Lend_Checklist__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HotDocs_Answer_Set_ID__c</fullName>
        <label>HotDocs Answer Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Matter_Approved__c</fullName>
        <description>Used by approval process to kick off a PB flow</description>
        <label>Litigation Matter Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter/Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Participant</label>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Matter_Deal__r.advpm__Primary_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counterparty/Client</inlineHelpText>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Completed_Date__c</fullName>
        <label>Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDS_ID_Deal__c</fullName>
        <formula>Matter_Deal__r.SDS_ID_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDS ID (Deal)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Review in Progress</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <recordTypes>
        <fullName>Agreement_Approval</fullName>
        <active>true</active>
        <label>Agreement Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deal_Approval</fullName>
        <active>true</active>
        <label>Deal Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdown_Approval</fullName>
        <active>true</active>
        <label>Drawdown Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fit_To_Lend_Approval</fullName>
        <active>true</active>
        <label>Fit To Lend Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_Matter</fullName>
        <active>true</active>
        <label>Litigation Matter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>